build:Add dependency and plugins in main pom.xml
Added dependency:
   lombok,gson,eclipse-collections,junit,assertj,log4j
Added plugins:
   maven-enforcer,maven-compiler,flatten-maven,maven-assembly,
   maven-resources,maven-surefire